@@ -7,9 +7,11 @@ import torch
 import math
 import random
 import matplotlib
+import pandas as pd
 import matplotlib.pyplot as plt
 from collections import namedtuple, deque
 from itertools import count
+import seaborn as sns
 
 def read_xacro(file_name: str) -> str:
     current_file = file_name
@@ -26,10 +28,17 @@ def read_xacro(file_name: str) -> str:
 def check_pos(agent: int) -> str:
     return p.getBasePositionAndOrientation(agent)
 
+def get_dist_from_origin(agent: int) -> float:
+    xyz=p.getLinkState(agent, 0)[0]
+    return math.sqrt((xyz[0])**2 + (xyz[1])**2)
+
 # Initial Params
 current_robot=read_xacro("dogv1")
 current_environment="plane"
 time_interval = .1 #seconds
+min_force, max_force = 1, 200
+start_time=time.time()
+stats={"Dist": [], "Failed":[]}
 
 # Initialize the physics sim
 physicsClient = p.connect(p.GUI) #or p.DIRECT for non-graphical version
@@ -44,6 +53,7 @@ p.changeDynamics(bodyUniqueId= agent, linkIndex=-1, lateralFriction=1)
 # Relevant sliders
 f_slider = p.addUserDebugParameter(paramName="Force of Limbs",rangeMin=0,rangeMax=200,startValue=10)
 kill_sim = p.addUserDebugParameter(paramName="Stop Simulation",rangeMin=1,rangeMax=-1, startValue=0) # If min > max, slider turns into a button.
+enable_fail_con = p.addUserDebugParameter(paramName="Enable Fail Condition",rangeMin=1,rangeMax=-1, startValue=0)
 
 # Gets active joints and indexes them with name in dict
 numOfJoints = p.getNumJoints(agent)
@@ -53,21 +63,57 @@ for num in range (numOfJoints):
         joints_dict[p.getJointInfo(agent, num)[0]]=(p.getJointInfo(agent, num)[1])
 # print(joints_dict)
 joints=list(joints_dict.keys())
-
 time_index_last = time.time()
+
+# AI model will be able to choose how many joints, which joints, and how strong
+# This current functions choices are just random
+def move_multi_joints_random(agent: int, joint_indexes: list):
+    k=random.randint(1, len(joint_indexes))
+    moving_joint_indexes=random.sample(joint_indexes, k)
+    joint_move_dists=[random.uniform(-1.2, 1.2) for n in moving_joint_indexes]
+    joint_forces=[random.randint(min_force, max_force) for n in moving_joint_indexes]
+    
+    p.setJointMotorControlArray(agent, 
+                                jointIndices=moving_joint_indexes, 
+                                controlMode=p.POSITION_CONTROL, 
+                                targetPositions=joint_move_dists, 
+                                forces=joint_forces)
+
+def debug_stats(agent: int, show=True):
+    if len(failure) > 0:
+        failed=True
+    else:
+        failed=False
+    if show: print(f"Agent: {agent}\nFail Con. Status: {failed}\nFlat Dist From Origin: {get_dist_from_origin(agent)}\n")
+    stats["Dist"].append(get_dist_from_origin(agent))
+    stats["Failed"].append(failed)
+    
+def sum_stats():
+    df=pd.DataFrame(stats)
+    sum_graph=sns.relplot(
+    data=df, kind="line",
+    x=df.index, y=df["Dist"]
+    )
+    sum_graph.set_axis_labels("Ticks", "Meters") 
+    plt.show()
+    
 while True:
     # Failure Condition. If contact is made, sim exits.
     failure = p.getContactPoints(bodyA=planeId, bodyB=agent, linkIndexA=-1, linkIndexB=-1 ) #base link = -1
     
     if time.time() - time_index_last >= time_interval:  
-        p.setJointMotorControl2(agent, random.choice(joints), controlMode=p.POSITION_CONTROL, targetPosition=random.uniform(-1.2, 1.2), force=p.readUserDebugParameter(f_slider))
+        
         time_index_last = time.time()
-    
+        move_multi_joints_random(agent=agent, joint_indexes=joints)
+        debug_stats(agent=agent, show=False)
+        #p.setJointMotorControl2(agent, random.choice(joints), controlMode=p.POSITION_CONTROL, targetPosition=random.uniform(-1.2, 1.2), force=p.readUserDebugParameter(f_slider))
+        
     p.stepSimulation()
     time.sleep(1./240.)
-        
-    if p.readUserDebugParameter(kill_sim) > 0 or len(failure) > 0:
+    
+    if p.readUserDebugParameter(kill_sim) > 0 or p.readUserDebugParameter(enable_fail_con) > 0:
         p.disconnect()
         break
 
+sum_stats()
 
